--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,16 @@ header{
     padding-left: 10px;
     background-color: rgb(31, 31, 31);
 }
+.logo4{
+    width: 55%;
+    height: 110px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding-left: 10px;
+    background-color: #3b1a15;
+}
+
 .menu{
     width: 45%;
     height: 110px;
@@ -75,7 +85,16 @@ header{
     background-color: rgb(31, 31, 31);
     padding-right: 10px;
 }
-    
+
+.menu3{
+    width: 45%;
+    height: 110px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    background-color: #3b1a15;
+    padding-right: 10px;
+}
     
 
 button {
@@ -428,9 +447,10 @@ button:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
+    font-size: 150px;
+    color: rgb(231, 231, 231);
+    font-family: 'Rubik', sans-serif;
     margin: 50px;
-    animation: rotateClockwise 3s linear infinite alternate, rotateCounterClockwise 3s linear infinite alternate;
 
 }
 
@@ -537,7 +557,50 @@ footer{
     background: linear-gradient(to bottom,#333832, rgb(0, 0, 0),rgb(0, 0, 0), rgb(0, 0, 0));    
 }
 
+.hobbymid{
+    display: flex;
+    
+    align-items: center;
+    height: 3950px;
+    margin: 0;
+    background-color: #3b1a15;
+    flex-direction: column;
+}
 
+.hobbymid-in{
+    height: 3860px;
+    width: 90%;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+}
+.hobbymid-1{
+    height: 400px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+}
+.hobby-1-title{
+    font-family: 'Hedvig Letters Serif', serif;
+    color: #ffffff;
+    font-size: 120px;
+}
+
+.hobby-1-img{
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+  
+      
+}
+.hobby-1-foto{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 @media only screen and (max-width: 1000px) {
     .menu {
