--- a/css/main.css
+++ b/css/main.css
@@ -577,7 +577,7 @@ footer{
     align-items: center;
 }
 .hobbymid-1{
-    height: 400px;
+    height: 500px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -587,11 +587,14 @@ footer{
     font-family: 'Hedvig Letters Serif', serif;
     color: #ffffff;
     font-size: 120px;
+    margin-top: -20px;
+    margin-bottom: -20px;
+    
 }
 
 .hobby-1-img{
     width: 100%;
-    height: 100px;
+    height: 500px;
     overflow: hidden;
   
       
@@ -600,6 +603,74 @@ footer{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.hobby-1-text{
+    
+    font-family: 'Hedvig Letters Serif', serif;
+    color: #ffffff;
+    display: flex;
+    justify-content: flex-end;
+    
+}
+.hobby-1-text-in{
+    width: 500px;
+
+}
+.red-line {
+    height: 4px; /* 设置线的高度 */
+    width: 100%; /* 设置线的宽度为100% */
+    background-color: #3b1a15; /* 设置线的颜色 */
+    margin-top: 40px;
+}
+.hobbymid-2{
+    height: 500px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+}
+
+.hobbymid-2-in{
+    height: 500px;
+    width: 33%;
+    display: flex;
+    flex-direction: row;
+}
+.hobbymid-2-title{
+    font-family: 'Hedvig Letters Serif', serif;
+    color: #ffffff;
+    font-size: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    
+    writing-mode: vertical-rl; /* vertical right-to-left */
+    text-orientation: upright; /* keep text upright */
+    white-space: nowrap; /* prevent wrapping */
+    
+}
+.hobbymid-2-inhoud{
+    display: flex;
+    flex-direction: column;
+}
+.hobbymid-2-img{
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+  
+      
+}
+.hobbymid-2-foto{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.hobbymid-2-text{
+    width: 70%;
+    color: #ffffff;
+    display: flex;
+    justify-content: end;
+    
 }
 
 @media only screen and (max-width: 1000px) {
