--- a/css/main.css
+++ b/css/main.css
@@ -621,6 +621,7 @@ footer{
     width: 100%; /* 设置线的宽度为100% */
     background-color: #3b1a15; /* 设置线的颜色 */
     margin-top: 40px;
+    margin-bottom: 70px;
 }
 .hobbymid-2{
     height: 500px;
@@ -628,11 +629,12 @@ footer{
     display: flex;
     flex-direction: row;
     margin-top: 50px;
+    justify-content: space-around;
 }
 
 .hobbymid-2-in{
     height: 500px;
-    width: 33%;
+    width: 25%;
     display: flex;
     flex-direction: row;
 }
