--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,13 @@ header{
     align-items: center;
     background-color: white;
     padding-right: 10px;
+    
 }
+.menu-logo{
+    position: relative;
+    z-index: 2;
+}
+
 
 .menu2{
     width: 45%;
@@ -93,6 +99,15 @@ header{
     justify-content: end;
     align-items: center;
     background-color: #3b1a15;
+    padding-right: 10px;
+}
+.menu4{
+    width: 45%;
+    height: 110px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    
     padding-right: 10px;
 }
     
@@ -417,13 +432,13 @@ input, textarea {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    background-color: rgb(145, 145, 145);
-    
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    font-family: 'Hedvig Letters Serif', serif;
+    font-size: 20px;
 }
 
-button:hover {
 
-}
+
 .studiemid{
     display: flex;
     
@@ -548,13 +563,30 @@ button:hover {
 .foot{
     width: 100%;
     height: 100px;
-
+    display: flex;
+    justify-content: center;
 }
 
 footer{
     width: 100%;
     height: 100px;
-    background: linear-gradient(to bottom,#333832, rgb(0, 0, 0),rgb(0, 0, 0), rgb(0, 0, 0));    
+    background-color: rgb(31, 31, 31);
+    display: flex;
+    justify-content: center;
+}
+
+.footer-vlak{
+    width: 600px;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer-text{
+    color: #ccc;
+    font-size: 30px;
+    font-weight: 400;
 }
 
 .hobbymid{
@@ -674,6 +706,49 @@ footer{
     justify-content: end;
     
 }
+.body-1{
+    position: relative;
+    width: 100%;
+    height: 1080px;
+    overflow: hidden;
+}
+.contactmid{
+    font-size: 200px;
+    font-weight: 700;
+    white-space: nowrap;
+    line-height: 1;
+    margin-top: -550px;
+    transform: rotate(-45deg);
+    
+}
+.contactmid-text-1{
+    margin-left: -300px;
+    
+}
+.contactmid-vlak{
+    height: 600px;
+    width: auto;
+   
+    margin-top: -1600px;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contactmid-vlak-in{
+    height: 600px;
+    width: 50%;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contactmid-vlak-in-1{
+    width: 900px;
+}
+
 
 @media only screen and (max-width: 1000px) {
     .menu {
@@ -777,6 +852,7 @@ footer{
         flex-direction: row;
         justify-content: center;
     }
+    
     h3{
         height: 150px;
         font-size: 80px;
@@ -799,6 +875,77 @@ footer{
         background-color: #333832;
        
     }
+    footer{
+        width: 100%;
+        height: 100px;
+        background-color: rgb(31, 31, 31);
+        display: flex;
+        justify-content: center;
+        margin-top: 100px;
+    }
+    .hobby-1-title{
+        font-family: 'Hedvig Letters Serif', serif;
+        color: #ffffff;
+        font-size: 80px;
+        margin-top: -20px;
+        margin-bottom: -20px;
+        
+    }
+    .contactmid-vlak-in{
+        width: 80%;
+    }
+    .studiemid{
+        height: 5200px;
+    }
+    .studiemid-mid{
+        height: 1100px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        
+        
+    }
+    .studiemid-mid-left{
+        height: 1000px;
+        width: 45%;
+        display: flex;
+        justify-content: start;
+        align-items: top;
+        font-size: 75px;
+        color: rgb(231, 231, 231);
+        font-family: 'Rubik', sans-serif;
+    }
+    .studiemid-mid-right{
+        height: 1000px;
+        width: 400px;
+        margin-left: 20px;
+        display: flex;
+        
+        
+        font-family: 'Rubik', sans-serif;
+        color: rgb(231, 231, 231);
+        align-items: end;
+        font-size: 15px;
+        flex-direction: column;
+    }
+    .studiemid-mid-r-top{
+        width: 70%;
+        height: 400px;
+        overflow: hidden;
+        margin-bottom: 100px; 
+        margin-top: -200px;   
+    }
+    .studie-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .studiemid-top{
+        display: none;
+    }
+    
+  
+    
 
        
   }
